added module controller, inserted test-jit graph into index.gsp

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -93,7 +93,11 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-
+#infovis {
+	
+	height:800px;
+	
+}
 
 
 
